@@ -1,1 +1,1 @@
-1.2.2 revision 818
+1.2.3 revision 824
