@@ -28,7 +28,7 @@
 
 /*!
 	\file
-	\version \$Id: EbmlDate.h 270 2010-05-25 12:02:30Z robux4 $
+	\version \$Id: EbmlDate.h 822 2011-11-25 21:01:45Z mosub $
 	\author Steve Lhomme     <robux4 @ users.sf.net>
 */
 #ifndef LIBEBML_DATE_H
