@@ -2,7 +2,7 @@
 
 LIB ebml
 {
-  PROJECT_VERSION 1.2.2
+  PROJECT_VERSION 1.2.3
 
   INCLUDE .
   EXPINCLUDE .
