@@ -1,1 +1,1 @@
-1.3.0 revision 818
+1.3.0 revision 824
