@@ -1,3 +1,7 @@
+2011-10-xx robux4
+New 1.2.3 version:
+    - compilation warning fixes for mingw
+
 2011-09-23 robux4/mosu
 New 1.2.2 version:
     - fix usage of the DEBUG #define (use LIBEBML_DEBUG instead)
